# the_advent_of_code

./: .gitignore  Makefile  README.md  bootstrap.py  goto.sh  today_ocaml.sh  today_python.sh
2016_01_ocaml/advent/lib/: solve.ml
2016_12_ocaml/advent/lib/: solve.ml
2016_25_ocaml/advent/lib/: solve.ml
2023/2023_01_ocaml/: Makefile
2023_01_ocaml/: Makefile
2023_13_ocaml/advent/lib/: diff.ml  parse.ml  parse.mli  solve.ml  transpose.ml  transpose.mli
2023_14_ocaml/advent/lib/: dish.ml  dish.mli  waterfall.ml  waterfall.mli
2024_01_ocaml/: Makefile
2024_02_ocaml/advent/lib/: solve.ml
2024_03_ocaml/advent/lib/: dune  solve.ml
2024_04_ocaml/advent/lib/: solve.ml
2024_05_ocaml/advent/lib/: dune  solve.ml
2024_06_ocaml/advent/lib/: solve.ml
2024_07_ocaml/advent/lib/: dune  solve.ml
2024_08_ocaml/advent/lib/: solve.ml
2024_09_ocaml/advent/lib/: solve.ml
2024_10_ocaml/advent/lib/: solve.ml
2024_11_ocaml/advent/lib/: solve.ml
2024_12_ocaml/advent/lib/: solve.ml
2024_13_python/: main.py
2024_14_ocaml/advent/lib/: solve.ml
2024_16_ocaml/advent/lib/: solve.ml
2024_17_ocaml/advent/lib/: solve.ml
2024_18_ocaml/advent/lib/: solve.ml
2024_20_ocaml/advent/lib/: solve.ml
2024_21_ocaml/advent/lib/: solve.ml
2024_21_python/: main.py
2024_22_ocaml/: Makefile
2025_03_python/: Makefile  main.py
advent/: Makefile
advent/robin_advent_lib/: dune-project  robin_advent_lib.opam
advent/robin_advent_lib/lib/: coord.ml  coord.mli  dir.ml  dir.mli  dune  matrix.ml  matrix.mli  side.ml  side.mli
python_default_project/: main.py
(+32 files in other folders)
